--- a/html/index.html
+++ b/html/index.html
@@ -7,7 +7,6 @@
 </head>
 <body>
   <h1>github-actions-demo-app</h1>
-  Version:
-  <script src="./script.js"></script>
+  <p>Version: 1</p>
 </body>
 </html>
